upcoming movies added

--- a/templates/productionHouse.html
+++ b/templates/productionHouse.html
@@ -261,7 +261,7 @@
       <input type="text" placeholder="Enter the Genre" name="genre" required>
 
       <label for="release"><b>Release Date</b></label>
-      <input type="text" placeholder="Enter the IMDB Rating" name="release" required>
+      <input type="text" placeholder="In YYYY-MM-DD HH:MM:SS Format" name="release" required>
 
       <button type="submit" name="upcoming" value="Send" onclick="closeForm1()">Upload
       </button>
@@ -277,6 +277,7 @@
 		    <div class="bg-dark p-4">
 
 		      <button type="button" class="btn btn-secondary btn-lg btn-block" onclick="openForm1()">Upcoming Movie</button>
+          <p></p>
 		      <button type="button" class="btn btn-secondary btn-lg btn-block" onclick="openForm()">Upload Movie</button>
 
 
