prequel in upload movie added

--- a/templates/productionHouse.html
+++ b/templates/productionHouse.html
@@ -233,6 +233,9 @@
       <label for="genre"><b>IMDB</b></label>
       <input type="text" placeholder="Enter the IMDB Rating" name="imdb" required>
 
+      <label for="genre"><b>PrequelID</b></label>
+      <input type="text" placeholder="Enter the PrequelID (int)" name="PrequelID">
+
       <button type="submit" name="upload" value="Send" onclick="closeForm()">Upload
       </button>
         </div>
