--- a/templates/productionHouse.html
+++ b/templates/productionHouse.html
@@ -291,7 +291,7 @@
 		    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
 		      <span class="navbar-toggler-icon"></span>
 		    </button>
-		    <!-- <h3 align="right" style="color:white;">Rank: 5/9</h3> -->
+		    <h3 align="right" style="color:white;">Rank: {{rank}}/9</h3>
 		  </nav>
 		</div>
 		<div class="jumbotron">
