--- a/templates/movie.html
+++ b/templates/movie.html
@@ -145,7 +145,9 @@
 		  <div class="collapse" id="navbarToggleExternalContent">
 		    <div class="bg-dark p-4">
 		      <button type="button" class="btn btn-secondary btn-lg btn-block">Make Payment</button>
-		      <button type="button" class="btn btn-secondary btn-lg btn-block">Log Out</button>
+		      <p></p>
+		      <a href="/">
+		      <button type="button" class="btn btn-secondary btn-lg btn-block">Log Out</button></a>
 		    </div>
 		  </div>
 		  <nav class="navbar navbar-dark bg-dark">
