--- a/templates/user.html
+++ b/templates/user.html
@@ -171,8 +171,7 @@
 		</div>
 		<div class="jumbotron">
 				<div class="container" id="head">
-					<h1>{{ name }}</h1>
-					<h4 style="text-align: left;">LoginId:{{LoginID}}</h4>
+					<h1>Hello, {{ LoginID }}</h1>
 				</div>
 			
 		</div>
