--- a/templates/main.html
+++ b/templates/main.html
@@ -504,7 +504,7 @@ function closeForm1() {
             <div class="speaker">
               <img src="{{url_for('static', filename='/assets/img/speakers/2.jpg')}}" alt="Speaker 6" class="img-fluid">
               <div class="details">
-                <h3><a href="speaker-details.html">Willow Trantow</a></h3>
+                <h3><a href="speaker-details.html">Googling :)</a></h3>
                 <p></p>
                 <div class="social">
                   <a href=""><i class="fa fa-twitter"></i></a>
