--- a/templates/user.html
+++ b/templates/user.html
@@ -202,6 +202,7 @@
 	  		</form>
 		</div>
 		<div class="btn-group-vertical">
+			<!-- search_movie_result_embed -->
 			{{ search_movie_result_embed | safe }}
 		</div>
 		
